# arXiv_explorer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.superpowers/brainstorm/1708292-1775462805/content/: highlight-styles.html
.superpowers/brainstorm/1708292-1775462805/state/: server-stopped
docs/superpowers/plans/: 2026-04-06-major-tui-update.md  2026-04-06-ratatui-tui-port.md
docs/superpowers/specs/: 2026-04-06-major-tui-update-design.md  2026-04-06-ratatui-tui-port-design.md
reviews/: 2603.11177v1_review.md  2603.11177v1_review_ko.md
src/arxiv_explorer/: __init__.py
src/arxiv_explorer/cli/: config.py  daily.py  export.py  lists.py  main.py  notes.py  preferences.py  review.py  search.py
src/arxiv_explorer/core/: __init__.py  arxiv_categories.py  config.py  database.py  models.py  update_checker.py
src/arxiv_explorer/services/: arxiv_client.py  author_service.py  job_manager.py  notes_service.py  paper_service.py  preference_service.py  providers.py  reading_list_service.py  recommendation.py  review_service.py  settings_service.py  summarization.py  translation.py
src/arxiv_explorer/tui/: app.py  workers.py
src/arxiv_explorer/tui/screens/: category_picker.py  daily.py  folder_name_input.py  folder_picker.py  jobs_panel.py  list_create.py  list_picker.py  note_input.py  notes.py  paper_detail.py  preferences.py  reading_lists.py  review_screen.py  search.py
src/arxiv_explorer/tui/styles/: app.tcss
src/arxiv_explorer/tui/widgets/: paper_panel.py  paper_table.py
src/arxiv_explorer/utils/: display.py
tests/: conftest.py  test_author_service.py  test_category_fuzzy.py  test_database.py  test_fetch_cache.py  test_job_manager.py  test_like_dislike_lists.py  test_models.py  test_preference_service.py  test_reading_list_hierarchy.py  test_recommendation.py  test_review_service.py  test_update_checker.py  test_weight_percentage.py
tui-rs/: Cargo.toml
tui-rs/src/: app.rs  categories.rs  events.rs  main.rs  presets.rs
tui-rs/src/commands/: ai.rs  fetch.rs  mod.rs
tui-rs/src/db/: mod.rs  models.rs
tui-rs/tests/: schema.sql
