[project]
name = "arxiv-explorer"
version = "0.1.0"
description = "Personalized arXiv paper recommendation and management system"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Axect", email = "axect.tg@proton.me" },
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0",
    "feedparser>=6.0.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "textual>=0.85.0",
]

[project.scripts]
axp = "arxiv_explorer.cli.main:app"

[project.urls]
Homepage = "https://github.com/Axect/arXiv_explorer"
Repository = "https://github.com/Axect/arXiv_explorer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_explorer"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
